<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">AnyMemo</string>
    <string name="app_full_name">AnyMemo</string>
    <string name="website_versions_view">https://anymemo.org/versions-view</string>
    <string name="ok_text">OK</string>
    <string name="cancel_text">Cancel</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="back_menu_text">Back</string>
    <string name="detail_menu_text">Detail</string>
    <string name="settings_menu_text">Settings</string>
    <string name="speak_question_menu_text">Speak question</string>
    <string name="speak_answer_menu_text">Speak answer</string>
    <string name="undo_text">Undo</string>
    <string name="undo_fail_text">Unable to undo</string>
    <string name="undo_fail_message">You can only undo 1 card.</string>
    <string name="recent_databases">Recent databases</string>
    <string name="option_button_text">Options</string>
    <string name="about_button_text">About</string>
    <string name="help_button_text">Help</string>
    <string name="edit_button_text">Preview/edit</string>
    <string name="preview_button_text">Preview</string>
    <string name="copyclipboard">Copy to clipboard</string>
    <string name="copyclipboard_summary">Automatically copy card content to clipboard.</string>
    <string name="memo_show_answer">Show answer</string>
    <string name="memo_no_item_title">No item</string>
    <string name="memo_no_item_message">There is no item to learn for now. If you want to cram, you can do quizzes by long clicking a db in the &quot;Recent&quot; tab.</string>
    <string name="memo_btn0_text">0 Forgot</string>
    <string name="memo_btn1_text">1 Forgot</string>
    <string name="memo_btn2_text">2 Very Hard</string>
    <string name="memo_btn3_text">3 Hard</string>
    <string name="memo_btn4_text">4 Easy</string>
    <string name="memo_btn5_text">5 Very Easy</string>
    <string name="memo_btn0_help_text">You have forgotten this card completely.</string>
    <string name="memo_btn1_help_text">You have forgotten this card completely.</string>
    <string name="memo_btn2_help_text">Barely correct answer. The interval is too long.</string>
    <string name="memo_btn3_help_text">Correct answer but with much effort. The interval was probably too long.</string>
    <string name="memo_btn4_help_text">Correct answer, with some effort. The interval was probably just right.</string>
    <string name="memo_btn5_help_text">Correct answer, but without any difficulties. The interval was probably too short.</string>
    <string name="memo_btn0_brief_text">0</string>
    <string name="memo_btn1_brief_text">1</string>
    <string name="memo_btn2_brief_text">2</string>
    <string name="memo_btn3_brief_text">3</string>
    <string name="memo_btn4_brief_text">4</string>
    <string name="memo_btn5_brief_text">5</string>
    <string name="memo_btn0_anki_text">Again</string>
    <string name="memo_btn1_anki_text">Again</string>
    <string name="memo_btn2_anki_text">Hard</string>
    <string name="memo_btn3_anki_text">Hard</string>
    <string name="memo_btn4_anki_text">Easy</string>
    <string name="memo_btn5_anki_text">Easy</string>
    <string name="memo_edit_dialog_title">Edit</string>
    <string name="global_settings">Global settings</string>
    <string name="settings_question_font_size">Question font size</string>
    <string name="settings_question_font_size_prompt">Font size</string>
    <string name="settings_answer_font_size">Answer font size</string>
    <string name="settings_answer_font_size_prompt">Font size</string>
    <string name="settings_question_align">Question text alignment</string>
    <string name="settings_question_align_prompt">Text alignment</string>
    <string name="settings_answer_align">Answer text alignment</string>
    <string name="settings_answer_align_prompt">Text alignment</string>
    <string name="settings_question_locale">Question audio</string>
    <string name="settings_question_locale_prompt">Locale</string>
    <string name="settings_answer_locale">Answer audio</string>
    <string name="settings_answer_locale_prompt">Locale</string>
    <string name="settings_html_display">Display in HTML</string>
    <string name="settings_ratio">Q/A display ratio</string>
    <string name="settings_wipe">Wipe all learning progress</string>
    <string name="settings_shuffle">Shuffle all cards</string>
    <string name="settings_inverse">Swap the Q/A of all cards</string>
    <string name="settings_save">Save</string>
    <string name="warning_text">Warning</string>
    <string name="settings_wipe_warning">ALL learning progress will be reset!</string>
    <string name="settings_shuffle_warning">This operation will shuffle all cards and can NOT be undone.</string>
    <string name="settings_inverse_warning">This operation will swap the location of question and answer. Swap&amp;dup will add all swapped cards to the back of current database instead of replacing.</string>
    <string name="delete_warning">Do you really want to delete this card?</string>
    <string name="skip_text">Skip</string>
    <string name="stat_total">Total: </string>
    <string name="stat_scheduled">Rev: </string>
    <string name="stat_new">New: </string>
    <string name="open_open_new_db">Open existing database</string>
    <string name="clear_all_pref">Reset all preferences</string>
    <string name="clear_recent_list">Clear recent tags</string>
    <string name="export_xml">Export Mnemosyne1 XML</string>
    <string name="add_screen_question">Question</string>
    <string name="add_screen_new">New</string>
    <string name="add_screen_answer">Answer</string>
    <string name="add_screen_next">Next</string>
    <string name="add_screen_previous">Previous</string>
    <string name="search_text">Search</string>
    <string name="fb_create_db">Create new DB</string>
    <string name="fb_create_dir">Create new folder</string>
    <string name="fb_create_db_message">Please enter the name of new database.</string>
    <string name="fb_create_dir_message">Please enter the name of new folder.</string>
    <string name="fb_delete_message">Are you sure to delete this file?</string>
    <string name="fb_edit_dialog_title">Edit</string>
    <string name="fb_fail_to_clone">Failure cloning the file.</string>
    <string name="fb_rename">Rename</string>
    <string name="fb_rename_message">Please enter the name below.</string>
    <string name="fb_rename_fail">Fail to rename.</string>
    <string name="loading_please_wait">Please wait...</string>
    <string name="loading_database">Loading database...</string>
    <string name="success">Success</string>
    <string name="fail">Failed</string>
    <string name="loading_save">Saving changes...</string>
    <string name="loading_connect_net">Refreshing tags from internet...</string>
    <string name="loading_downloading">Downloading... It may take a while.</string>
    <string name="downloader_connection_error">Connection error</string>
    <string name="downloader_connection_error_message">Cannot connect to server. Please check the internet connection.</string>
    <string name="downloader_download_success">Successfully downloaded</string>
    <string name="downloader_download_success_message">The database has been stored in: </string>
    <string name="downloader_download_fail">Download failed</string>
    <string name="downloader_download_fail_message">Failed to download this database. Error Message:</string>
    <string name="downloader_download_alert">Download: </string>
    <string name="downloader_download_alert_message">Details:&lt;br&gt;</string>
    <string name="about_title">About</string>
    <string name="about_text">Advanced spaced repetition flashcard learning software.&lt;br /&gt;&lt;br /&gt;Authors: Haowen Ning, Qi Wang&lt;br /&gt;&lt;br /&gt;Website: &lt;a href="https://anymemo.org"&gt;https://anymemo.org&lt;/a&gt; &lt;br /&gt;&lt;br /&gt;Acknowledge: Piotr Bazan, pomelo422, Haimivan, williamfeng, Lyndsey Percival, John Rissler, Dongping Xie&lt;br /&gt;&lt;br /&gt;Translators: Ladislav, jim4ever, paw3lk, Alexander Gomenyuk, Maksym Grinenko, Kim hyun-ho, Thomas Tempé, Alex Wirz Vieira, Neil Barry, Mattia Monga</string>
    <string name="about_version">Version history</string>
    <string name="what_is_new">New version installed</string>
    <string name="downloader_categories">Categories</string>
    <string name="interface_locale_title">Interface language</string>
    <string name="interface_locale_summary">Choose the language of the user interface. Please restart AnyMemo to take effect.</string>
    <string name="settings_typeface_question">User-defined question font (TTF)</string>
    <string name="settings_typeface_answer">User-defined answer font (TTF)</string>
    <string name="learn_ahead">Cram review</string>
    <string name="menu_text">Menu</string>
    <string name="filter_text">Filter</string>
    <string name="import_text">Import</string>
    <string name="export_text">Export</string>
    <string name="clear_filter_text">Clear</string>
    <string name="import_mnemosyne_xml_text">Import Mnemosyne1 XML</string>
    <string name="export_qa_txt">Export Q/A TXT</string>
    <string name="export_tab_txt">Export tab-separated TXT</string>
    <string name="export_csv">Export CSV</string>
    <string name="import_qa_txt">Import Q/A TXT</string>
    <string name="import_tab_txt">Import tab-separated TXT</string>
    <string name="import_csv">Import CSV</string>
    <string name="import_supermemo_xml_text">Import SuperMemo PPC XML</string>
    <string name="speech_ctl_title">Automatic speaking</string>
    <string name="speech_ctl_summary">How to invoke the speaking function when learning.</string>
    <string name="button_style_title">Grade button style</string>
    <string name="button_style_summary">Change the style of grading button when learning.</string>
    <string name="settings_customize_color">Customize colors</string>
    <string name="color_button_text">Select color</string>
    <string name="color_dialog_title">Color selection</string>
    <string name="color_h">hue</string>
    <string name="color_s">saturation</string>
    <string name="color_v">value</string>
    <string name="fullscreen_title">Fullscreen mode</string>
    <string name="fullscreen_summary">Display cards in fullscreen mode.</string>
    <string name="edit_dialog_category">Category</string>
    <string name="settings_audio_location_title">Set user audio location</string>
    <string name="what_is_new_message">See graphical guide of new features, please click version history button. or visit official website:&lt;a href="https://anymemo.org/versions-view"&gt;https://anymemo.org/versions-view&lt;/a&gt;&lt;br /&gt;</string>
    <string name="list_mode_text">Card tags</string>
    <string name="merge_db_text">Merge DB</string>
    <string name="merge_success_title">Merge success</string>
    <string name="note_text">Note</string>
    <string name="add_in_place">Add card here</string>
    <string name="add_back">Add card to back</string>
    <string name="edit_text">Edit</string>
    <string name="id_text">ID</string>
    <string name="entry_last_learn_date" translatable="false">last_learn_date</string>
    <string name="entry_next_learn_date" translatable="false">next_learn_date</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_profile_current_name">Current Name</string>
    <string name="edit_profile_update_name">Update Name</string>
    <string name="update">Update</string>
    <string name="account">Account</string>
    <string name="username">Username</string>
    <string name="user_name">Name</string>
    <string name="creation_date">Creation date</string>
    <string name="view_statistic">View statistic</string>
    <string name="account_register">Register</string>
    <string name="confirm">Confirm</string>
</resources>