<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_weight="1"
            android:layout_gravity="center" />

        <ImageButton
            android:id="@+id/edit_account"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:contentDescription="@string/edit_button_text"
            android:src="@drawable/ic_menu_edit" />

        <TextView
            android:text="@string/user_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="22dip"
            android:textStyle="bold"/>
        <TextView
            android:text="@string/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="22dip"
            android:textStyle="bold"/>
        <TextView
            android:text="@string/id_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="22dip"
            android:textStyle="bold"/>
        <TextView
            android:text="@string/creation_date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="22dip"
            android:textStyle="bold"/>
        <TextView
            android:text="@string/longest_login_strike"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="22dip"
            android:textStyle="bold"/>
        <TextView
            android:text="@string/current_login_strike"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="22dip"
            android:textStyle="bold"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="22dip"
            android:text="@string/view_statistic"/>
    </LinearLayout>
</ScrollView>
