<?xml version="1.0" encoding="utf-8"?>
<menu
  	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:anymemo="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/action_filter"
		android:title="@string/filter_text"
		android:icon="@drawable/ic_menu_filter"
		anymemo:showAsAction="ifRoom">
		<menu>
			<group
				android:id="@+id/filter_list"
				android:checkableBehavior="all">
				<item
					android:id="@+id/filter_test1"
					android:title="English_Hiragana"/>
				<item
					android:id="@+id/filter_test2"
					android:title="French (Body parts)"/>
			</group>
		</menu>
	</item>
    <item android:id="@+id/file_browser_createdb"
    	android:icon="@drawable/ic_add"
  		android:title="@string/fb_create_db" />
    <item android:id="@+id/file_browser_createdirectory"
    	android:icon="@android:drawable/ic_menu_gallery"
  		android:title="@string/fb_create_dir" />
</menu>
