<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView android:text="@string/edit_profile"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="25dp"
        android:textSize="24.5sp" />
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:text="@string/edit_profile_current_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:padding="3dip"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edit_profile_current_name_entry"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:inputType="none"
                android:gravity="top"
                android:minLines="1" android:layout_weight="1"/>
        </LinearLayout>

    <TextView
        android:text="@string/edit_profile_update_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="60dp"
        android:padding="3dip"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edit_profile_update_name_entry"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="3dp"
            android:inputType="text"
            android:gravity="top"
            android:minLines="1"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="40dp">

        <Button android:id="@+id/dropbox_login_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update" />
    </LinearLayout>


</LinearLayout>