<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/edit_dialog_root"
    android:orientation="vertical">
    <ScrollView
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:layout_width="fill_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <TextView
                android:text="@string/add_screen_question"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"/>
            <EditText
                android:id="@+id/edit_dialog_question_entry"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:gravity="top"
                android:layout_weight="1"/>
            <TextView
                android:text="@string/add_screen_answer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"/>
            <EditText
                android:id="@+id/edit_dialog_answer_entry"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:inputType="textMultiLine"
                android:gravity="top"
                android:minLines="3"
                android:layout_weight="1"/>
            <TextView
                android:text="@string/note_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"/>
            <EditText
                android:id="@+id/edit_dialog_note_entry"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:inputType="textMultiLine"
                android:gravity="top"
                android:minLines="1"
                android:layout_weight="1"/>
            <TextView
                android:text="@string/edit_dialog_category"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/edit_dialog_category_entry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dip"/>
                <Button
                    android:id="@+id/edit_dialog_category_button"
                    android:text="@string/edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <Button
                android:id="@+id/show_advanced_options"
                android:text="@string/advanced_options"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_radio"
                android:orientation="horizontal"
                android:visibility="gone">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/add_here_radio"
                    android:text="@string/add_in_place"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/add_back_radio"
                    android:text="@string/add_back"/>
            </RadioGroup>
            <TextView
                android:text="@string/id_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:visibility="gone"/>
            <EditText
                android:id="@+id/entry__id"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:visibility="gone"/>
            <TextView
                android:text="@string/entry_last_learn_date"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:padding="3dip"
                android:visibility="gone"/>
            <EditText
                android:id="@+id/entry_last_learn_date"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:visibility="gone"/>
            <TextView
                android:text="@string/entry_next_learn_date"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:padding="3dip"
                android:visibility="gone"/>
            <EditText
                android:id="@+id/entry_next_learn_date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>
            <TextView
                android:text="grade"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:visibility="gone"/>
            <EditText
                android:id="@+id/entry_grade"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:visibility="gone"/>
            <TextView
                android:text="easiness"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:visibility="gone"/>
            <EditText
                android:id="@+id/entry_easiness"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:visibility="gone"/>
            <TextView
                android:text="acq_reps"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:visibility="gone"/>
            <EditText
                android:id="@+id/entry_acq_reps"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:visibility="gone"/>
            <TextView
                android:text="ret_reps"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:visibility="gone"/>
            <EditText
                android:id="@+id/entry_ret_reps"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:visibility="gone"/>
            <TextView
                android:text="lapses"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:visibility="gone"/>
            <EditText
                android:id="@+id/entry_lapses"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:visibility="gone"/>
            <TextView
                android:text="acq_reps_since_lapse"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:visibility="gone"/>
            <EditText
                android:id="@+id/entry_acq_reps_since_lapse"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:visibility="gone"/>
            <TextView
                android:text="ret_reps_since_lapse"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:visibility="gone"/>
            <EditText
                android:id="@+id/entry_ret_reps_since_lapse"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:visibility="gone"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
